--- a/.docker/ubuntu-14.04-64/Dockerfile
+++ b/.docker/ubuntu-14.04-64/Dockerfile
@@ -2,7 +2,8 @@ FROM ubuntu:trusty
 MAINTAINER Artem Sidorenko <artem@posteo.de>
 
 RUN apt-get update ;\
-    apt-get -y install openssh-server supervisor man-db rsync;\
+    apt-get -y install openssh-server supervisor man-db rsync ;\
+    apt-get -y install git curl wget ;\
     rm -rf /var/lib/apt/lists/* ;\
     mkdir /var/run/sshd
 
@@ -11,7 +12,7 @@ RUN useradd -m -p '$6$UFLdXsV4$hnP4J2l8w02eCoj7ogsQZ0wdEImAKtzIoQqmrNLEXkyI1UsuP
 
 COPY assets /
 
-RUN chown -R vagrant:vagrant /home/vagrant; \
+RUN chown -R vagrant:vagrant /home/vagrant ;\
     chmod 600 /home/vagrant/.ssh/authorized_keys
 
 CMD supervisord -c /etc/supervisord.conf
